--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/heima68
     username: root
-    password: qwer1234
+    password: root1234
 eureka:
   client:
     service-url:
@@ -16,7 +16,3 @@ eureka:
     prefer-ip-address: true
     ip-address: 127.0.0.1
 
-    zuul:
-      prefix: /api # 添加路由前缀
-      routes:
-        item-service: /item/** # 将商品微服务映射到/item/**
