--- a/ly-gateway/src/main/resources/application.yml
+++ b/ly-gateway/src/main/resources/application.yml
@@ -24,9 +24,13 @@ ribbon:
 
 
 zuul:
-      prefix: /api # 添加路由前缀
-      routes:
-        item-service: /item/** # 将商品微服务映射到/item/**
+  prefix: /api # 添加路由前缀
+  routes:
+    item-service: /item/** # 将商品微服务映射到/item/**
+    upload-service:
+      path: /upload/**
+      serviceId: upload-service
+      strip-prefix: false
 
 ly:
   cors:
