--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -16,3 +16,10 @@ eureka:
     prefer-ip-address: true
     ip-address: 127.0.0.1
 
+mybatis:
+  type-aliases-package: com.leyou.item.entity
+  configuration:
+    map-underscore-to-camel-case: true
+  mapper-locations: mappers/*.xml
+
+
