--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: item-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/heima68
+    url: jdbc:mysql://localhost:3306/heima68?characterEncoding=utf8&useSSL=true
     username: root
     password: root1234
 eureka:
@@ -20,6 +20,11 @@ mybatis:
   type-aliases-package: com.leyou.item.entity
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: mappers/*.xml
+
+
+mapper:
+  wrap-keyword: "`{0}`"
 
 
