--- a/ly-upload/src/main/resources/application.yml
+++ b/ly-upload/src/main/resources/application.yml
@@ -15,3 +15,14 @@ eureka:
   instance:
     ip-address: 127.0.0.1
     prefer-ip-address: true
+
+
+ly:
+  oss:
+    accessKeyId: LTAIf2rRadsvQES0
+    accessKeySecret: nFAzu98CNFCBrAtnIwXM138DoskR9P
+    host: http://image.leyou.com # 访问oss的域名，很重要bucket + endpoint
+    endpoint: oss-cn-shanghai.aliyuncs.com # 你的服务的端点，不一定跟我一样
+    dir: "leyou" # 保存到bucket的某个子目录
+    expireTime: 20 # 过期时间，单位是S
+    maxFileSize: 5242880 #文件大小限制，这里是5M
